@@ -10,6 +10,7 @@ import java.util.List;
 
 import sdp.group2.geometry.*;
 import sdp.group2.world.Zone;
+import sdp.group2.pc.MasterController;
 import sdp.group2.util.Constants.TeamColour;
 import sdp.group2.util.Constants.TeamSide;
 import sdp.group2.util.Tuple;
@@ -28,13 +29,12 @@ public class Pitch extends Plane implements IPitch {
     /**
      * [mm], from wall to wall
      */
+    
+    private TeamSide ourSide;
 
     private Zone[] zones = new Zone[4];
     private Ball ball = new Ball();
     //Specify what Colour and Side of the pitch we are on;
-    private TeamColour ourTeam;
-    private TeamSide ourSide;
-
     private Robot[] robots;
 
     private Robot blueDefender = new Robot();
@@ -143,33 +143,60 @@ public class Pitch extends Plane implements IPitch {
     }
     
     public void updateRobots(List<Tuple<Point, Point>> robots, TeamColour colour) {
-    	// Only take more than 1 robot because otherwise
-    	// we don't know if defender or attacker
-    	if (robots.size() > 1) {
-    		// Needs to be sorted by defender first and attacker next or something
-    		for (Tuple<Point, Point> tuple : robots) {
-				Point position = tuple.getFirst();
-				Point dotPosition = tuple.getSecond();
+    	if (robots.size() == 2) {
+    		Tuple<Point, Point> firstRobot = robots.get(0);
+    		Tuple<Point, Point> secondRobot = robots.get(1);
+    		Point firstPosition = firstRobot.getFirst();
+    		Point firstDotPosition = firstRobot.getSecond();
+    		Point secondPosition = secondRobot.getFirst();
+    		Point secondDotPosition = secondRobot.getSecond();
+    		if (isDefender(firstPosition)) {
+    			// First is defender
     			if (colour == TeamColour.YELLOW) {
-    				if (isDefender(position)) {
-    					yellowDefender.updatePosition(position);
-   						yellowDefender.updateFacing(dotPosition);
-    				} else {
-    					yellowAttacker.updatePosition(position);
-   						yellowAttacker.updateFacing(dotPosition);
+    				// Team is yellow
+    				yellowDefender.updatePosition(firstPosition.toMillis());
+    				yellowAttacker.updatePosition(secondPosition.toMillis());
+    				if (firstDotPosition != null) {
+    					yellowDefender.updateFacing(firstDotPosition.toMillis());
+    				}
+    				if (secondDotPosition != null) {
+    					yellowAttacker.updateFacing(secondDotPosition.toMillis());
     				}
     			} else {
-    				if (isDefender(position)) {
-    					blueDefender.updatePosition(position);
-   						blueDefender.updateFacing(dotPosition);
-    				} else {
-    					blueAttacker.updatePosition(position);
-   						blueAttacker.updateFacing(dotPosition);
+    				// Team is blue
+    				blueDefender.updatePosition(firstPosition.toMillis());
+    				blueAttacker.updatePosition(secondPosition.toMillis());
+    				if (firstDotPosition != null) {
+    					blueDefender.updateFacing(firstDotPosition.toMillis());
+    				}
+    				if (secondDotPosition != null) {
+    					blueAttacker.updateFacing(secondDotPosition.toMillis());
     				}
     			}
-			}
+    		} else {
+    			// First is attacker
+    			if (colour == TeamColour.YELLOW) {
+    				// Team is yellow
+    				yellowAttacker.updatePosition(firstPosition.toMillis());
+    				yellowDefender.updatePosition(secondPosition.toMillis());
+    				if (firstDotPosition != null) {
+    					yellowAttacker.updateFacing(firstDotPosition.toMillis());
+    				}
+    				if (secondDotPosition != null) {
+    					yellowDefender.updateFacing(secondDotPosition.toMillis());
+    				}
+    			} else {
+    				blueAttacker.updatePosition(firstPosition.toMillis());
+    				blueDefender.updatePosition(secondPosition.toMillis());
+    				if (firstDotPosition != null) {
+    					blueAttacker.updateFacing(firstDotPosition.toMillis());
+    				}
+    				if (secondDotPosition != null) {
+    					blueDefender.updateFacing(secondDotPosition.toMillis());
+    				}
+    			}
+    		}
     	}
-    	System.out.println();
     }
 
     /**
@@ -177,7 +204,7 @@ public class Pitch extends Plane implements IPitch {
      * @return our defender Robot
      */
     public Robot getOurDefenderRobot() {
-        if (ourTeam == TeamColour.YELLOW) {
+        if (MasterController.ourTeam == TeamColour.YELLOW) {
             return yellowDefender;
         } else {
             return blueDefender;
@@ -189,7 +216,7 @@ public class Pitch extends Plane implements IPitch {
      * @return our attacker Robot
      */
     public Robot getOurAttacker() {
-        if (ourTeam == TeamColour.YELLOW) {
+        if (MasterController.ourTeam == TeamColour.YELLOW) {
             return yellowAttacker;
         } else {
             return blueAttacker;
@@ -201,7 +228,7 @@ public class Pitch extends Plane implements IPitch {
      * @return opposing defender Robot
      */
     public Robot getFoeDefender() {
-        if (ourTeam == TeamColour.BLUE) {
+        if (MasterController.ourTeam == TeamColour.BLUE) {
             return yellowDefender;
         } else {
             return blueDefender;
@@ -213,7 +240,7 @@ public class Pitch extends Plane implements IPitch {
      * @return opposing attacker Robot
      */
     public Robot getFoeAttacker() {
-        if (ourTeam == TeamColour.BLUE) {
+        if (MasterController.ourTeam == TeamColour.BLUE) {
             return yellowAttacker;
         } else {
             return blueAttacker;
@@ -222,101 +249,101 @@ public class Pitch extends Plane implements IPitch {
 
     //Zones 0-3
 
-    // Any returns of -1 is not found
-    public int getYellowAttackZone() {
-        if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.YELLOW) {
-            return 2;
-        } else if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.BLUE) {
-            return 1;
-        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.YELLOW) {
-            return 1;
-        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.BLUE) {
-            return 2;
-        } else {
-            return -1;
-        }
-    }
+//    // Any returns of -1 is not found
+//    public int getYellowAttackZone() {
+//        if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.YELLOW) {
+//            return 2;
+//        } else if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.BLUE) {
+//            return 1;
+//        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.YELLOW) {
+//            return 1;
+//        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.BLUE) {
+//            return 2;
+//        } else {
+//            return -1;
+//        }
+//    }
+//
+//    // Any returns of -1 is not found
+//    public int getBlueAttackZone() {
+//        if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.YELLOW) {
+//            return 1;
+//        } else if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.BLUE) {
+//            return 2;
+//        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.YELLOW) {
+//            return 2;
+//        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.BLUE) {
+//            return 1;
+//        } else {
+//            return -1;
+//        }
+//    }
+//
+//    // Any returns of -1 is not found
+//    public int getYellowDefendZone() {
+//        if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.YELLOW) {
+//            return 0;
+//        } else if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.BLUE) {
+//            return 3;
+//        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.YELLOW) {
+//            return 3;
+//        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.BLUE) {
+//            return 0;
+//        } else {
+//            return -1;
+//        }
+//    }
+//
+//    // Any returns of -1 is not found
+//    public int getBlueDefendZone() {
+//        if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.YELLOW) {
+//            return 3;
+//        } else if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.BLUE) {
+//            return 0;
+//        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.YELLOW) {
+//            return 0;
+//        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.BLUE) {
+//            return 3;
+//        } else {
+//            return -1;
+//        }
+//    }
 
     // Any returns of -1 is not found
-    public int getBlueAttackZone() {
-        if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.YELLOW) {
-            return 1;
-        } else if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.BLUE) {
-            return 2;
-        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.YELLOW) {
-            return 2;
-        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.BLUE) {
-            return 1;
-        } else {
-            return -1;
-        }
-    }
-
-    // Any returns of -1 is not found
-    public int getYellowDefendZone() {
-        if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.YELLOW) {
-            return 0;
-        } else if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.BLUE) {
-            return 3;
-        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.YELLOW) {
-            return 3;
-        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.BLUE) {
-            return 0;
-        } else {
-            return -1;
-        }
-    }
-
-    // Any returns of -1 is not found
-    public int getBlueDefendZone() {
-        if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.YELLOW) {
-            return 3;
-        } else if (ourSide == TeamSide.LEFT && ourTeam == TeamColour.BLUE) {
-            return 0;
-        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.YELLOW) {
-            return 0;
-        } else if (ourSide == TeamSide.RIGHT && ourTeam == TeamColour.BLUE) {
-            return 3;
-        } else {
-            return -1;
-        }
-    }
-
-    // Any returns of -1 is not found
-    public boolean foeAttackerHasBall() {
-        if (ourTeam == TeamColour.YELLOW) {
-            return (getBallZone().getID() == getBlueAttackZone());
-        } else {
-            return (getBallZone().getID() == getYellowAttackZone());
-        }
-    }
-
-    // Any returns of -1 is not found
-    public boolean foeDefenderHasBall() {
-        if (ourTeam == TeamColour.YELLOW) {
-            return (getBallZone().getID() == getYellowDefendZone());
-        } else {
-            return (getBallZone().getID() == getBlueDefendZone());
-        }
-    }
-
-    // Any returns of -1 is not found
-    public boolean ourAttackerHasBall() {
-        if (ourTeam == TeamColour.YELLOW) {
-            return (getBallZone().getID() == getYellowAttackZone());
-        } else {
-            return (getBallZone().getID() == getBlueAttackZone());
-        }
-    }
-
-    // Any returns of -1 is not found
-    public boolean ourDefenderHasBall() {
-        if (ourTeam == TeamColour.YELLOW) {
-            return (getBallZone().getID() == getYellowDefendZone());
-        } else {
-            return (getBallZone().getID() == getBlueDefendZone());
-        }
-    }
+//    public boolean foeAttackerHasBall() {
+//        if (MasterController.ourTeam == TeamColour.YELLOW) {
+//            return (getBallZone().getID() == getBlueAttackZone());
+//        } else {
+//            return (getBallZone().getID() == getYellowAttackZone());
+//        }
+//    }
+//
+//    // Any returns of -1 is not found
+//    public boolean foeDefenderHasBall() {
+//        if (MasterController.ourTeam == TeamColour.YELLOW) {
+//            return (getBallZone().getID() == getYellowDefendZone());
+//        } else {
+//            return (getBallZone().getID() == getBlueDefendZone());
+//        }
+//    }
+//
+//    // Any returns of -1 is not found
+//    public boolean ourAttackerHasBall() {
+//        if (MasterController.ourTeam == TeamColour.YELLOW) {
+//            return (getBallZone().getID() == getYellowAttackZone());
+//        } else {
+//            return (getBallZone().getID() == getBlueAttackZone());
+//        }
+//    }
+//
+//    // Any returns of -1 is not found
+//    public boolean ourDefenderHasBall() {
+//        if (MasterController.ourTeam == TeamColour.YELLOW) {
+//            return (getBallZone().getID() == getYellowDefendZone());
+//        } else {
+//            return (getBallZone().getID() == getBlueDefendZone());
+//        }
+//    }
     
     public Zone getOurDefendZone(){
     	if (ourSide == TeamSide.LEFT){
